--- a/src/BUILD.bazel
+++ b/src/BUILD.bazel
@@ -1,5 +1,4 @@
 load("@rules_python//python:defs.bzl", "py_binary")
-load("@pip_deps//:requirements.bzl", "requirement")
 
 py_binary(
     name = "main",
@@ -8,6 +7,6 @@ py_binary(
     ],
     main = "main.py",
     deps = [
-        requirement("grpcio")
+         "@com_github_grpc_grpc//src/python/grpcio/grpc:grpcio",
     ],
 )
